<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_intro">Droid Desserts</string>
    <string name="donut_desc">Donut are glazed and sprinkled with candy.</string>
    <string name="ice_cream_desc">Ice cream sandwiches have chocolate and vanilla filling.</string>
    <string name="froyo_desc">Froyo is premium self-serve frozen yoghurt.</string>

    <string name="donut_order_message">You ordered a Donut.</string>
    <string name="ice_cream_order_message">You ordered an Ice Cream.</string>
    <string name="froyo_order_message">You ordered a Froyo.</string>

    <string name="order_label"></string>
    <string name="name_label">Name :</string>
    <string name="enter_name_hint">Enter name here</string>
    <string name="address_label">Address :</string>
    <string name="enter_address_hint">Enter address here</string>
    <string name="city_label">City :</string>
    <string name="phone_label">Phone :</string>
    <string name="enter_phone_hint">Enter phone number here</string>
    <string name="note_label">Note :</string>
    <string name="enter_note_hint">Enter note here</string>

    <string name="choose_delivery_method">Choose delivery method :</string>
    <string name="same_day">Same Day delivery service.</string>
    <string name="next_day">Next Day delivery service.</string>
    <string name="pick_up">Pick Up delivery service.</string>

    <string-array name="city_array">
        <item>Bandung</item>
        <item>Jakarta</item>
        <item>Surabaya</item>
        <item>Bogor</item>
        <item>Tasikmalaya</item>
    </string-array>
</resources>
