<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/text_intro"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/donut_img"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginLeft="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/donut_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="139dp" />

    <ImageView
        android:id="@+id/ice_cream_img"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginLeft="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icecream_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donut_img"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="299dp" />

    <ImageView
        android:id="@+id/froyo_img"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginLeft="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/froyo_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ice_cream_img"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="461dp" />

    <TextView
        android:id="@+id/donut_desc"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginLeft="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:layout_marginRight="@dimen/margin_wide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/donut_desc"
        app:layout_constraintStart_toEndOf="@id/donut_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/donut_img"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="160dp" />

    <TextView
        android:id="@+id/ice_cream_desc"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginLeft="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:layout_marginRight="@dimen/margin_wide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream_desc"
        app:layout_constraintStart_toEndOf="@id/ice_cream_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ice_cream_img"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="267dp" />

    <TextView
        android:id="@+id/froyo_desc"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginLeft="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:layout_marginRight="@dimen/margin_wide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/froyo_desc"
        app:layout_constraintStart_toEndOf="@id/froyo_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/froyo_img"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="436dp" />
</androidx.constraintlayout.widget.ConstraintLayout>